--- a/documentation/trql.newsarticle.class.php.html
+++ b/documentation/trql.newsarticle.class.php.html
@@ -50,7 +50,7 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <section class="header">
 <span class="DocumentorLabel">Filename: </span><span class="property filename">trql.newsarticle.class.php</span>
 <span class="DocumentorLabel">Namespace: </span><span class="property namespace"><code>trql\schema\creativework</code></span>
-<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\vaesoli\Vaesoli as v,\trql\schema\creativework\Article as Article,\trql\form\Form as Form,\trql\fieldset\Fieldset as Fieldset,\trql\formset\Formset as Formset,\trql\input\Input as Input</code></span>
+<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\vaesoli\Vaesoli as v,\trql\schema\creativework\Article as Article,\trql\html\Form as Form,\trql\html\Fieldset as Fieldset,\trql\html\Formset as Formset,\trql\html\Input as Input</code></span>
 <span class="DocumentorLabel">Purpose: </span><span class="property purpose">A NewsArticle is an article whose content reports news, or
  provides background context and supporting materials for
  understanding the news.A more detailed overview of
@@ -58,7 +58,7 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <span class="DocumentorLabel">Author: </span><span class="property author">Pat Y. Boens</span>
 <span class="DocumentorLabel">Company: </span><span class="property company">Lato Sensu Management<br />Rue du Bois des Mazuis, 47<br />5070 Vitrival<br />Belgium<br /><a href="https://www.latosensu.be" class="DocumentorLink" title="Go to https://www.latosensu.be" itemprop="url">https://www.latosensu.be</a> (geonames: <a href="http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" class="DocumentorLink" title="Go to http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" itemprop="url">http://api.geonames.org/get?geonameId=8520400&username=demo&style=full</a>)<br />Vae Soli!: <a href="http://www.vaesoli.com" class="DocumentorLink" title="Go to http://www.vaesoli.com" itemprop="url">http://www.vaesoli.com</a><br /></span>
 <span class="DocumentorLabel">Creation date: </span><span class="property cdate">26-08-2020 21:40</span>
-<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">30/03/2021 - 11:43:52</span>
+<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">08/04/2021 - 19:47:19</span>
 <span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Intellectual Property belongs to Pat Y. Boens. You are free to:<br /><br /><strong>Share</strong> — copy and redistribute the material in any medium or format<br /><strong>Adapt</strong> — remix, transform, and build upon the material for any purpose, even commercially.<br /><br />Under the following terms:<br /><br /><strong>Attribution</strong> — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.<br /><br /><strong>No additional restrictions</strong> — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.<br /><br /><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="DocumentorLink" title="Go to https://creativecommons.org/licenses/by/4.0/legalcode" itemprop="url">https://creativecommons.org/licenses/by/4.0/legalcode</a></span>
 </section> <!-- .header -->
 <section class="classes">
@@ -743,6 +743,13 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <td class="description">Fixed 'class' information.</td>
 </tr>
 <tr class="property">
+<td class="name" id="var.shelter"><code>$shelter</code></td>
+<td class="type"><code>string</code></td>
+<td class="description">The folder where news articles are stored. This property is used in
+ the <code>browse()</code> method AND NOT in the <code>save()</code> method. Replaces
+ $szStorage</td>
+</tr>
+<tr class="property">
 <td class="name" id="var.sourceOrganization"><code>$sourceOrganization</code></td>
 <td class="type"><code>Organization</code></td>
 <td class="description">The <code><a href="?src=Organization">Organization</a></code> on whose behalf the creator was working.</td>
@@ -803,12 +810,6 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <td class="type"><code>CreativeWork|Event</code></td>
 <td class="description">A <code><a href="?src=CreativeWork">CreativeWork</a></code> or <code><a href="?src=Event">Event</a></code> about this <code><a href="?src=Thing">Thing</a></code>. 
  Inverse property: <code><a href="#var-about">$about</a></code>.</td>
-</tr>
-<tr class="property">
-<td class="name" id="var.szStorage"><code>$szStorage</code></td>
-<td class="type"><code>string</code></td>
-<td class="description">The folder where news articles are stored. This property is used in
- the <code>browse()</code> method AND NOT in the <code>save()</code> method.</td>
 </tr>
 <tr class="property">
 <td class="name" id="var.temporal"><code>$temporal</code></td>
