--- a/documentation/trql.ocr.class.php.html
+++ b/documentation/trql.ocr.class.php.html
@@ -49,8 +49,8 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <div class="trql_documentor_DocumentorSourceFile">
 <section class="header">
 <span class="DocumentorLabel">Filename: </span><span class="property filename">trql.ocr.class.php</span>
-<span class="DocumentorLabel">Namespace: </span><span class="property namespace"><code>trql\ocr</code></span>
-<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\quitus\Mother as Mother,\trql\quitus\iContext as iContext,\trql\vaesoli\Vaesoli as Vaesoli,\trql\utility\Utility as Utility,DOMDocument; use DOMXPath; if ( ! defined( 'MOTHER_ABSTRACT_CLASS' ) ) require_once( 'trql.mother.cl as s</code></span>
+<span class="DocumentorLabel">Namespace: </span><span class="property namespace"><code>trql\quitus\ocr</code></span>
+<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\quitus\Mother as Mother,\trql\quitus\iContext as iContext,\trql\vaesoli\Vaesoli as V,\trql\utility\Utility as Utility,\trql\quitus\lang\tool\Taxonomizer as Taxonomizer,DOMDocument; use DOMXPath; if ( ! defined( 'MOTHER_ABSTRACT_CLASS' ) ) require_once( 'trql.mother.cl as s</code></span>
 <span class="DocumentorLabel">Purpose: </span><span class="property purpose">OCR-oriented services</span>
 <span class="DocumentorLabel">Author: </span><span class="property author">Pat Y. Boens</span>
 <span class="DocumentorLabel">Company: </span><span class="property company"><br />Lato Sensu Management<br />
@@ -60,7 +60,7 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
                             <a href="http://www.latosensu.be" class="DocumentorLink" title="Go to http://www.latosensu.be" itemprop="url">http://www.latosensu.be</a><br />
                             Vae Soli! : <a href="http://www.vaesoli.org" class="DocumentorLink" title="Go to http://www.vaesoli.org" itemprop="url">http://www.vaesoli.org</a></span>
 <span class="DocumentorLabel">Creation date: </span><span class="property cdate">19-08-20 11:45</span>
-<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">30/03/2021 - 09:38:21</span>
+<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">08/04/2021 - 09:20:53</span>
 <span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Submitted to intellectual property rights (see
                             author)</span>
 </section> <!-- .header -->
@@ -121,6 +121,26 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <p><code>__destruct()</code></p>
 <p class="property return">Return:</p>
 <p class="seealso">(void):  No return</p>
+<hr /><p class="property func" id="fnc.getAPIKey"><span class="name"><strong><code>getAPIKey()</code></strong></span>: Class constructor</p>
+<p class="property">Syntax:</p>
+<p><code>getAPIKey( $szHome )</code></p>
+<span class="DocumentorLabel">Parameters: </span>
+<table class="properties">
+<thead>
+<tr>
+<th class="name">Name</th>
+<th class="type">Type</th>
+<th class="description">Description</th>
+</tr>
+</thead>
+<tr class="parameter">
+<td class="name" id="param.getAPIKey.szHome"><code>$szHome</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">Home of the class. Optional.</td>
+</tr>
+</table>
+<p class="property return">Return:</p>
+<p class="seealso">(self):  The current instance of the class</p>
 <hr /><p class="property func" id="fnc.parse"><span class="name"><strong><code>parse()</code></strong></span>: Parses a JSON return provided by ocr.space</p>
 <p class="property">Syntax:</p>
 <p><code>parse( $oJSON )</code></p>
