--- a/documentation/trql.portfolio.class.php.html
+++ b/documentation/trql.portfolio.class.php.html
@@ -55,7 +55,7 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <span class="DocumentorLabel">Author: </span><span class="property author">Pat Y. Boens</span>
 <span class="DocumentorLabel">Company: </span><span class="property company">Lato Sensu Management<br />Rue du Bois des Mazuis, 47<br />5070 Vitrival<br />Belgium<br /><a href="https://www.latosensu.be" class="DocumentorLink" title="Go to https://www.latosensu.be" itemprop="url">https://www.latosensu.be</a> (geonames: <a href="http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" class="DocumentorLink" title="Go to http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" itemprop="url">http://api.geonames.org/get?geonameId=8520400&username=demo&style=full</a>)<br />Vae Soli!: <a href="http://www.vaesoli.com" class="DocumentorLink" title="Go to http://www.vaesoli.com" itemprop="url">http://www.vaesoli.com</a><br /></span>
 <span class="DocumentorLabel">Creation date: </span><span class="property cdate">05-01-21 10:10</span>
-<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">06/03/2021 - 11:35:00</span>
+<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">03/04/2021 - 09:26:21</span>
 <span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Intellectual Property belongs to Pat Y. Boens. You are free to:<br /><br /><strong>Share</strong> — copy and redistribute the material in any medium or format<br /><strong>Adapt</strong> — remix, transform, and build upon the material for any purpose, even commercially.<br /><br />Under the following terms:<br /><br /><strong>Attribution</strong> — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.<br /><br /><strong>No additional restrictions</strong> — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.<br /><br /><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="DocumentorLink" title="Go to https://creativecommons.org/licenses/by/4.0/legalcode" itemprop="url">https://creativecommons.org/licenses/by/4.0/legalcode</a></span>
 </section> <!-- .header -->
 <section class="classes">
@@ -684,6 +684,12 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <td class="description">Fixed 'class' information.</td>
 </tr>
 <tr class="property">
+<td class="name" id="var.shelter"><code>$shelter</code></td>
+<td class="type"><code>string</code></td>
+<td class="description">A relative path where all Aspirations get stored.
+ Supersedes szStorageFolder</td>
+</tr>
+<tr class="property">
 <td class="name" id="var.sourceOrganization"><code>$sourceOrganization</code></td>
 <td class="type"><code>Organization</code></td>
 <td class="description">The <code><a href="?src=Organization">Organization</a></code> on whose behalf the creator was working.</td>
@@ -722,11 +728,6 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <td class="name" id="var.szCodeName"><code>$szCodeName</code></td>
 <td class="type"><code>string</code></td>
 <td class="description">Code name of the Portfolio.</td>
-</tr>
-<tr class="property">
-<td class="name" id="var.szStorageFolder"><code>$szStorageFolder</code></td>
-<td class="type"><code>string</code></td>
-<td class="description">A relative path where all Aspirations get stored</td>
 </tr>
 <tr class="property">
 <td class="name" id="var.temporal"><code>$temporal</code></td>
@@ -881,7 +882,7 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
       {
           foreach( $oPortfolio->aAspirations as $oAspiration )
           {
-              // Do something 
+              // Do something
           }
       }</strong>
 
