--- a/documentation/trql.taxonomizer.class.php.html
+++ b/documentation/trql.taxonomizer.class.php.html
@@ -48,22 +48,23 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 
 <div class="trql_documentor_DocumentorSourceFile">
 <section class="header">
-<span class="DocumentorLabel">Filename: </span><span class="property filename">trql.tool.class.php</span>
-<span class="DocumentorLabel">Namespace: </span><span class="property namespace"><code>trql\tool</code></span>
-<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\vaesoli\Vaesoli as Vaesoli,\trql\equipment\Equipment as Equipment</code></span>
-<span class="DocumentorLabel">Purpose: </span><span class="property purpose">physical item that can be used to achieve a goal</span>
+<span class="DocumentorLabel">Filename: </span><span class="property filename">trql.taxonomizer.class.php</span>
+<span class="DocumentorLabel">Namespace: </span><span class="property namespace"><code>trql\quitus\lang\tool</code></span>
+<span class="DocumentorLabel">Class aliases: </span><span class="property aliases"><code>\trql\vaesoli\Vaesoli as V,\trql\tool\Tool as Tool,\trql\html\Form as Form,\trql\html\Fieldset as Fieldset,\trql\html\Input as Input</code></span>
+<span class="DocumentorLabel">Purpose: </span><span class="property purpose">Utility that creates ontologies (set of terms
+ used in a domain</span>
 <span class="DocumentorLabel">Author: </span><span class="property author">Pat Y. Boens</span>
 <span class="DocumentorLabel">Company: </span><span class="property company">Lato Sensu Management<br />Rue du Bois des Mazuis, 47<br />5070 Vitrival<br />Belgium<br /><a href="https://www.latosensu.be" class="DocumentorLink" title="Go to https://www.latosensu.be" itemprop="url">https://www.latosensu.be</a> (geonames: <a href="http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" class="DocumentorLink" title="Go to http://api.geonames.org/get?geonameId=8520400&username=demo&style=full" itemprop="url">http://api.geonames.org/get?geonameId=8520400&username=demo&style=full</a>)<br />Vae Soli!: <a href="http://www.vaesoli.com" class="DocumentorLink" title="Go to http://www.vaesoli.com" itemprop="url">http://www.vaesoli.com</a><br /></span>
-<span class="DocumentorLabel">Creation date: </span><span class="property cdate">26-08-2020 18:49</span>
-<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">03/04/2021 - 10:22:09</span>
+<span class="DocumentorLabel">Creation date: </span><span class="property cdate">03-04-21 10:23</span>
+<span class="DocumentorLabel">Last modification date: </span><span class="property mdate">08/04/2021 - 21:47:46</span>
 <span class="DocumentorLabel">License/Copyrights: </span><span class="property license">Intellectual Property belongs to Pat Y. Boens. You are free to:<br /><br /><strong>Share</strong> — copy and redistribute the material in any medium or format<br /><strong>Adapt</strong> — remix, transform, and build upon the material for any purpose, even commercially.<br /><br />Under the following terms:<br /><br /><strong>Attribution</strong> — You must give appropriate credit, provide a link to the license, and indicate if changes were made. You may do so in any reasonable manner, but not in any way that suggests the licensor endorses you or your use.<br /><br /><strong>No additional restrictions</strong> — You may not apply legal terms or technological measures that legally restrict others from doing anything the license permits.<br /><br /><a href="https://creativecommons.org/licenses/by/4.0/legalcode" class="DocumentorLink" title="Go to https://creativecommons.org/licenses/by/4.0/legalcode" itemprop="url">https://creativecommons.org/licenses/by/4.0/legalcode</a></span>
 </section> <!-- .header -->
 <section class="classes">
 <section class="class shadow">
-<span class="DocumentorLabel">Class: </span><span class="property classname"><code>Tool</code></span>
-<span class="DocumentorLabel">Description: </span><span class="property description"></span>
-<span class="DocumentorLabel">Inheritance: </span><span class="property inheritance"><code><a href="?src=Mother">Mother</a> &gt; <a href="?src=Thing">Thing</a> &gt; <a href="?src=Equipment">Equipment</a> &gt; Tool</code></span>
-<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Tool extends Equipment</code></span>
+<span class="DocumentorLabel">Class: </span><span class="property classname"><code>Taxonomizer</code></span>
+<span class="DocumentorLabel">Description: </span><span class="property description">Physical item that can be used to achieve a goal</span>
+<span class="DocumentorLabel">Inheritance: </span><span class="property inheritance"><code><a href="?src=Mother">Mother</a> &gt; <a href="?src=Thing">Thing</a> &gt; <a href="?src=Equipment">Equipment</a> &gt; <a href="?src=Tool">Tool</a> &gt; Taxonomizer</code></span>
+<span class="DocumentorLabel">Declaration: </span><span class="property declaration"><code>class Taxonomizer extends Tool</code></span>
 <span class="DocumentorLabel">Properties: </span>
 <table class="properties">
 <thead>
@@ -175,6 +176,11 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
  Inverse property: <code><a href="#var-about">$about</a></code>.</td>
 </tr>
 <tr class="property">
+<td class="name" id="var.szClass"><code>$szClass</code></td>
+<td class="type"><code>string</code></td>
+<td class="description">CSS class of the task when it needs to be rendered</td>
+</tr>
+<tr class="property">
 <td class="name" id="var.url"><code>$url</code></td>
 <td class="type"><code>string</code></td>
 <td class="description">URL of the item.</td>
@@ -182,11 +188,10 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <tr class="property">
 <td class="name" id="var.wikidataId"><code>$wikidataId</code></td>
 <td class="type"><code>string</code></td>
-<td class="description">Wikidata ID. physical item that can be used to achieve
- a goal instrument | implement</td>
+<td class="description">Wikidata ID. No equivalent</td>
 </tr>
 </table>
-<h2 class="DocumentorLabel">Methods of <code>Tool</code></h2>
+<h2 class="DocumentorLabel">Methods of <code>Taxonomizer</code></h2>
 <p class="property func" id="fnc.__construct"><span class="name"><strong><code>__construct()</code></strong></span>: Class constructor</p>
 <p class="property">Syntax:</p>
 <p><code>__construct( $szHome )</code></p>
@@ -212,6 +217,143 @@ p.property.func { font: .9em/1em lucida,georgia,"times new roman",serif;
 <p><code>__destruct()</code></p>
 <p class="property return">Return:</p>
 <p class="seealso">(void):  No return</p>
+<hr /><p class="property func" id="fnc.__toForm"><span class="name"><strong><code>__toForm()</code></strong></span>: Returns the object as a form</p>
+<p class="property">Syntax:</p>
+<p><code>__toForm( $szWords )</code></p>
+<span class="DocumentorLabel">Parameters: </span>
+<table class="properties">
+<thead>
+<tr>
+<th class="name">Name</th>
+<th class="type">Type</th>
+<th class="description">Description</th>
+</tr>
+</thead>
+<tr class="parameter">
+<td class="name" id="param.__toForm.szConcept"><code>$szConcept</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">The concept. Optional. Empty string by default.</td>
+</tr>
+<tr class="parameter">
+<td class="name" id="param.__toForm.szWords"><code>$szWords</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">The words (\n separated). Optional. Empty string by default.</td>
+</tr>
+</table>
+<p class="property return">Return:</p>
+<p class="seealso">(string):  HTML Code corresponding to a form of the object</p>
+<hr /><p class="property func" id="fnc.MISC_Taxonomize"><span class="name"><strong><code>MISC_Taxonomize()</code></strong></span>: Taxonomize a resource</p>
+<p class="property">Warning:</p>
+<p>Experimental function. Do not use ina production environment!</p>
+<p class="property">Syntax:</p>
+<p><code>MISC_Taxonomize( $szType )</code></p>
+<span class="DocumentorLabel">Parameters: </span>
+<table class="properties">
+<thead>
+<tr>
+<th class="name">Name</th>
+<th class="type">Type</th>
+<th class="description">Description</th>
+</tr>
+</thead>
+<tr class="parameter">
+<td class="name" id="param.MISC_Taxonomize.szResource"><code>$szResource</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">The resource to taxonomize (a URL, a file, ...)</td>
+</tr>
+<tr class="parameter">
+<td class="name" id="param.MISC_Taxonomize.szLang"><code>$szLang</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">Language of the taxonomy</td>
+</tr>
+<tr class="parameter">
+<td class="name" id="param.MISC_Taxonomize.szType"><code>$szType</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">Resource type</td>
+</tr>
+</table>
+<p class="property return">Return:</p>
+<p class="seealso">(array):  An array of words found in the $szResource resource</p>
+<p class="property">Example(s):</p>
+<pre>
+
+      var_dump( MISC_Taxonomize( 'http://www.vaesoli.org' ) );
+  </pre>
+<hr /><p class="property func" id="fnc.ontologize"><span class="name"><strong><code>ontologize()</code></strong></span>: Class constructor</p>
+<p class="property">Warning:</p>
+<p>The class is quite experimental for now and does not do much
+ for the time being. In the future, "concepts" and "topics" will be
+ extracted and the array that will be produced will link terms
+ together to form a sort of hierarchy</p>
+<p class="property">Remark:</p>
+<p>HTML must be treated prior to <code>taxonomize()</code>.</p>
+<p class="property">Syntax:</p>
+<p><code>ontologize( $iMinCount )</code></p>
+<span class="DocumentorLabel">Parameters: </span>
+<table class="properties">
+<thead>
+<tr>
+<th class="name">Name</th>
+<th class="type">Type</th>
+<th class="description">Description</th>
+</tr>
+</thead>
+<tr class="parameter">
+<td class="name" id="param.ontologize.szText"><code>$szText</code></td>
+<td class="type"><code>string</code></td>
+<td class="description seealso">The text to taxonomize in UTF-8</td>
+</tr>
+<tr class="parameter">
+<td class="name" id="param.ontologize.iMinLen"><code>$iMinLen</code></td>
+<td class="type"><code>int</code></td>
+<td class="description seealso">Minimum length of words to be retained in the analysis</td>
+</tr>
+<tr class="parameter">
+<td class="name" id="param.ontologize.iMinCount"><code>$iMinCount</code></td>
+<td class="type"><code>int</code></td>
+<td class="description seealso">Minimum count for words to be retained. If a word does not appear more than X, it is considered not to be essential for the analysis</td>
+</tr>
+</table>
+<p class="property return">Return:</p>
+<p class="seealso">(array):  Associative array of words (word-count)</p>
+<p class="property">Example(s):</p>
+<pre>
+
+  use \trql\vaesoli\Vaesoli   as V;
+  use \trql\tool\Taxonomizer  as Taxonomizer;
+
+  if ( ! defined( 'VAESOLI_CLASS_VERSION' ) )
+      require_once( 'd:/websites/snippet-center/trql.vaesoli.class.php' );
+
+  if ( ! defined( 'TAXONOMIZER_CLASS_VERSION' ) )
+      require_once( 'd:/websites/snippet-center/trql.taxonomizer.class.php' );
+
+  // Create the object
+  $o = new Taxonomizer();
+
+  // Get a text
+  $szHTML = V::HTTP_GetURL( "http://www.lvid.org/documents/" );
+
+  // If we got something
+  if ( ! empty( $szHTML ) )
+  {
+      // Extract the body of the HTML
+      if ( preg_match('%<body\b[^>]*>(?P<payload>.*?)</body>%si',$szHTML,$aMatches ) )
+      {
+          // 1) Convert entities to their equivalents
+          // 2) Strip HTML tags
+          // 3) Get rid of the scripts
+          // 4) Get rid of punctuation
+          // 5) Reduce consecutive of spaces to a single occurence
+          $szBody = V::STR_Reduce( preg_replace( '/[[:punct:]]/si',' ',preg_replace( '%<script\b[^>]*>(.*?)</script>%si',' ',strip_tags( html_entity_decode( $aMatches['payload'] ) ) ) ) );
+
+          // Get a list of words
+          if ( is_array( $aWords = $o->ontologize( $szBody,3 /* min length */,4 /* min count */ ) ) && count( $aWords ) > 0 )
+              var_dump( $aWords );
+      }
+  }
+
+  </pre>
 <hr /></section> <!-- .class -->
 </section> <!-- .classes -->
 </div> <!-- End of trql_documentor_DocumentorSourceFile-->
